--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+async-timeout==4.0.2
 asyncio==3.4.3
 autopep8==1.6.0
 azure-core==1.24.1
@@ -6,13 +7,17 @@ certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+Deprecated==1.2.13
 Flask==2.1.2
 idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
 pycodestyle==2.8.0
+pyparsing==3.0.9
+redis==4.3.3
 requests==2.28.0
 six==1.16.0
 sodapy==2.1.1
@@ -21,4 +26,5 @@ typing_extensions==4.2.0
 uamqp==1.5.3
 urllib3==1.26.9
 Werkzeug==2.1.2
+wrapt==1.14.1
 zipp==3.8.0
